--- a/Back-Kata/src/main/resources/application.properties
+++ b/Back-Kata/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=Back-Kata
-
-spring.datasource.url=jdbc:postgresql://localhost:5433/kata_db
+spring.datasource.url=jdbc:postgresql://localhost:${POSTGRES_HOST_PORT}/${POSTGRES_DB}
 spring.datasource.username=postgres
 spring.datasource.password=admin
-
+jwt.secret=${JWT_SECRET}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+logging.level.org.springframework.security=DEBUG
