--- a/Back-Kata/src/main/resources/application.properties
+++ b/Back-Kata/src/main/resources/application.properties
@@ -1,8 +1,18 @@
 spring.application.name=Back-Kata
 spring.datasource.url=jdbc:postgresql://localhost:${POSTGRES_HOST_PORT}/${POSTGRES_DB}
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
 jwt.secret=${JWT_SECRET}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 logging.level.org.springframework.security=DEBUG
+app.allowed-email-domain=${ALLOWED_EMAIL_DOMAIN:}
+security.bcrypt.strength=${BCRYPT_STRENGTH:8}
+
+# CORS Configuration
+app.cors.allowed-origins=${ALLOWED_ORIGINS:http://localhost:4200,http://localhost:3000}
+app.cors.allowed-methods=${ALLOWED_METHODS:GET,POST,PUT,PATCH,DELETE,OPTIONS}
+app.cors.allowed-headers=${ALLOWED_HEADERS:*}
+app.cors.exposed-headers=${EXPOSED_HEADERS:}
+app.cors.allow-credentials=${ALLOW_CREDENTIALS:true}
+app.cors.max-age=${CORS_MAX_AGE:3600}
