--- a/Back-Kata/src/main/resources/application.properties
+++ b/Back-Kata/src/main/resources/application.properties
@@ -2,17 +2,24 @@ spring.application.name=Back-Kata
 spring.datasource.url=jdbc:postgresql://localhost:${POSTGRES_HOST_PORT}/${POSTGRES_DB}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
-jwt.secret=${JWT_SECRET}
+jwt.secret=${JWT_SECRET:AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8=}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 logging.level.org.springframework.security=DEBUG
 app.allowed-email-domain=${ALLOWED_EMAIL_DOMAIN:}
 security.bcrypt.strength=${BCRYPT_STRENGTH:8}
 
-# CORS Configuration
 app.cors.allowed-origins=${ALLOWED_ORIGINS:http://localhost:4200,http://localhost:3000}
 app.cors.allowed-methods=${ALLOWED_METHODS:GET,POST,PUT,PATCH,DELETE,OPTIONS}
 app.cors.allowed-headers=${ALLOWED_HEADERS:*}
 app.cors.exposed-headers=${EXPOSED_HEADERS:}
 app.cors.allow-credentials=${ALLOW_CREDENTIALS:true}
 app.cors.max-age=${CORS_MAX_AGE:3600}
+
+spring.mail.host=${SMTP_HOST:smtp.gmail.com}
+spring.mail.port=${SMTP_PORT:587}
+spring.mail.username=${SMTP_USER}
+spring.mail.password=${SMTP_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+app.mail.from=${MAIL_FROM:no-reply@kata.local}
