Terraform and CI/CD

--- a/Back-Kata/src/main/resources/application.properties
+++ b/Back-Kata/src/main/resources/application.properties
@@ -9,6 +9,10 @@ logging.level.org.springframework.security=DEBUG
 app.allowed-email-domain=${ALLOWED_EMAIL_DOMAIN:}
 security.bcrypt.strength=${BCRYPT_STRENGTH:8}
 
+# Actuator defaults (can be overridden per profile)
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.probes.enabled=true
+
 app.cors.allowed-origins=${ALLOWED_ORIGINS:http://localhost:4200,http://localhost:3000}
 app.cors.allowed-methods=${ALLOWED_METHODS:GET,POST,PUT,PATCH,DELETE,OPTIONS}
 app.cors.allowed-headers=${ALLOWED_HEADERS:*}
