--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,8 +11,43 @@ env:
   PROJECT_NAME: back-kata
 
 jobs:
+  deploy-ecr:
+    name: 1. Create ECR Repo (Terraform)
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./Back-Kata/terraform
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v3
+      with:
+        terraform_version: "1.9.0"
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
+
+    - name: Terraform Init
+      run: terraform init
+
+    - name: Terraform Apply (ECR Only)
+      run: |
+        terraform apply -auto-approve -target=aws_ecr_repository.main \
+          -var="aws_region=${{ env.AWS_REGION }}" \
+          -var="project_name=${{ env.PROJECT_NAME }}" \
+          -var="db_password=${{ secrets.DB_PASSWORD }}" \
+          -var="jwt_secret=${{ secrets.JWT_SECRET }}"
+
   build-and-push:
-    name: Build & Push Docker Image
+    name: 2. Build & Push Docker Image
+    needs: deploy-ecr
     runs-on: ubuntu-latest
     outputs:
       image_tag: ${{ steps.build-image.outputs.image_tag }}
@@ -39,18 +74,14 @@ jobs:
         IMAGE_TAG: ${{ github.sha }}
       working-directory: ./Back-Kata
       run: |
-        # Build the Docker image
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
-        
-        # Push the Docker image
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
-        
         echo "image_tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
 
   deploy-infra:
-    name: Deploy Infrastructure (Terraform)
+    name: 3. Deploy Full Infrastructure (Terraform)
     needs: build-and-push
     runs-on: ubuntu-latest
     defaults:
@@ -76,10 +107,7 @@ jobs:
     - name: Terraform Init
       run: terraform init
 
-    - name: Terraform Validate
-      run: terraform validate
-
-    - name: Terraform Apply
+    - name: Terraform Apply (Full)
       run: |
         terraform apply -auto-approve \
           -var="aws_region=${{ env.AWS_REGION }}" \
