--- a/Back-Kata/src/main/resources/application-prod.properties
+++ b/Back-Kata/src/main/resources/application-prod.properties
@@ -12,13 +12,13 @@ spring.datasource.password=${DB_PASSWORD:postgres}
 spring.datasource.hikari.maximum-pool-size=${DB_POOL_MAX_SIZE:10}
 spring.datasource.hikari.minimum-idle=${DB_POOL_MIN_IDLE:2}
 
-# JPA
-spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:validate}
+# JPA (TEMPORARY: Using update until Flyway is fixed)
+spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:update}
 
-# Flyway
-spring.flyway.enabled=true
-spring.flyway.baseline-on-migrate=true
-spring.flyway.locations=classpath:db/migration
+# Flyway (DISABLED: Investigating why migrations don't run)
+spring.flyway.enabled=false
+# spring.flyway.baseline-on-migrate=true
+# spring.flyway.locations=classpath:db/migration
 spring.jpa.show-sql=${SHOW_SQL:false}
 
 # Actuator
