--- a/Back-Kata/src/main/resources/application-prod.properties
+++ b/Back-Kata/src/main/resources/application-prod.properties
@@ -25,6 +25,7 @@ spring.jpa.show-sql=${SHOW_SQL:false}
 management.endpoints.web.exposure.include=health,info,metrics,prometheus
 management.endpoint.health.show-details=when_authorized
 management.endpoint.health.probes.enabled=true
+management.health.mail.enabled=false
 
 # Metrics
 management.metrics.export.cloudwatch.enabled=true
