Espero que sea el último Commit

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,7 @@ jobs:
         terraform apply -auto-approve -target=aws_ecr_repository.main \
           -var="aws_region=${{ env.AWS_REGION }}" \
           -var="project_name=${{ env.PROJECT_NAME }}" \
+          -var="mail_from=${{ secrets.SMTP_USER }}" \
           -var="db_password=${{ secrets.DB_PASSWORD }}" \
           -var="jwt_secret=${{ secrets.JWT_SECRET }}" \
           -var="smtp_user=${{ secrets.SMTP_USER }}" \
@@ -114,6 +115,7 @@ jobs:
         terraform apply -auto-approve \
           -var="aws_region=${{ env.AWS_REGION }}" \
           -var="project_name=${{ env.PROJECT_NAME }}" \
+          -var="mail_from=${{ secrets.SMTP_USER }}" \
           -var="db_password=${{ secrets.DB_PASSWORD }}" \
           -var="jwt_secret=${{ secrets.JWT_SECRET }}" \
           -var="smtp_user=${{ secrets.SMTP_USER }}" \
