--- a/Back-Kata/src/main/resources/application.properties
+++ b/Back-Kata/src/main/resources/application.properties
@@ -12,6 +12,7 @@ security.bcrypt.strength=${BCRYPT_STRENGTH:8}
 # Actuator defaults (can be overridden per profile)
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.probes.enabled=true
+management.health.mail.enabled=false
 
 app.cors.allowed-origins=${ALLOWED_ORIGINS:http://localhost:4200,http://localhost:3000}
 app.cors.allowed-methods=${ALLOWED_METHODS:GET,POST,PUT,PATCH,DELETE,OPTIONS}
