--- a/Back-Kata/src/test/resources/application-test.properties
+++ b/Back-Kata/src/test/resources/application-test.properties
@@ -8,7 +8,5 @@ spring.jpa.show-sql=false
 jwt.secret=AAECAwQFBgcICQoLDA0ODxAREhMUFRYXGBkaGxwdHh8=
 security.bcrypt.strength=4
 app.cors.allowed-origins=http://localhost:4200
-spring.mail.host=localhost
-spring.mail.port=2525
-spring.mail.username=
-spring.mail.password=
+# Email simulation (no real email sending)
+app.mail.from=no-reply@kata.local
