--- a/Back-Kata/src/main/resources/application.properties
+++ b/Back-Kata/src/main/resources/application.properties
@@ -12,7 +12,6 @@ security.bcrypt.strength=${BCRYPT_STRENGTH:8}
 # Actuator defaults (can be overridden per profile)
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.probes.enabled=true
-management.health.mail.enabled=false
 
 app.cors.allowed-origins=${ALLOWED_ORIGINS:http://localhost:4200,http://localhost:3000}
 app.cors.allowed-methods=${ALLOWED_METHODS:GET,POST,PUT,PATCH,DELETE,OPTIONS}
@@ -21,10 +20,5 @@ app.cors.exposed-headers=${EXPOSED_HEADERS:}
 app.cors.allow-credentials=${ALLOW_CREDENTIALS:true}
 app.cors.max-age=${CORS_MAX_AGE:3600}
 
-spring.mail.host=${SMTP_HOST:smtp.gmail.com}
-spring.mail.port=${SMTP_PORT:587}
-spring.mail.username=${SMTP_USER}
-spring.mail.password=${SMTP_PASSWORD}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+# Email simulation (no real email sending)
 app.mail.from=${MAIL_FROM:no-reply@kata.local}
