Fix netlify redirects

--- a/netlify.toml
+++ b/netlify.toml
@@ -13,10 +13,12 @@
 
 # Configuración de redirecciones para SPA (Single Page Application)
 # Esto asegura que todas las rutas de Angular funcionen correctamente
+# IMPORTANTE: Esta regla debe estar al final para que funcione correctamente
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+  force = false
 
 # Headers de seguridad
 [[headers]]
